<package>
  <name>ndt_fuser</name>
  <version>1.0.30</version>
  <description>ndt_fuser</description>
<maintainer email="jari.p.saarinen@gmail.com">Jari Saarinen</maintainer>
<maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
<maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <maintainer email="tomasz.kucner@oru.se">Tomasz Kucner</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ndt_fuser</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Todor Stoyanov</author>
  <author>Jari Saarinen</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>ndt_registration</build_depend>
  <build_depend>ndt_map</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ndt_visualisation</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>ndt_registration</run_depend>
  <run_depend>ndt_map</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>ndt_visualisation</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>opengl</run_depend>
  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>ndt_registration</test_depend> -->
  <!-- <test_depend>ndt_map</test_depend> -->
  <!-- <test_depend>laser_geometry</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>ndt_visualisation</test_depend> -->

<!--export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib" cflags="-I${prefix}/include"/>
</export-->

</package>
