<?xml version="1.0"?>
<package>
  <name>ndt_generic</name>
  <version>1.0.30</version>
  <description>The ndt_generic package</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>

  <author>Henrik Andreasson</author>

  <license>BSD</license>


  <build_depend>cmake_modules</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <run_depend>angles</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <!-- <export> -->
  <!--   <cpp cflags="-I${prefix}/include" /> -->

  <!-- </export> -->
</package>
