<package>
  <name>ndt_map</name>
  <version>1.0.4</version>
  <description>Contains the definitions of the 3D Normal Distributions Transform data structures, 
     used for mapping, registration, etc.</description>
<maintainer email="jari.p.saarinen@gmail.com">Jari Saarinen</maintainer>
<maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
<maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
<maintainer email="daniel.canelhas@oru.se">Daniel Canelhas</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ndt_map</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Todor Stoyanov</author>
  <author>Jari Saarinen</author>
  <author>Henrik Andreasson</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pointcloud_vrml</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pointcloud_vrml</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pcl</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>pointcloud_vrml</test_depend> -->
  <!-- <test_depend>opencv2</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib" cflags="-I${prefix}/include"/>
</export>

</package>
