<package>
  <name>ndt_map_builder</name>
  <version>1.0.31</version>
  <description>ndt_map_builder</description>

  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
  <maintainer email="daniel.adolfsson@oru.se">Daniel Adolfsson</maintainer>
  
  <author>Todor Stoyanov</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ndt_map_builder</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>ndt_map</build_depend>
  <build_depend>ndt_registration</build_depend>

  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>ndt_map</run_depend>
  <run_depend>ndt_registration</run_depend>

<!--export>
    <cpp cflags="-I${prefix}/include"/>
</export-->

</package>
